# eo-datascience

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  Makefile  README.md  README.qmd  _quarto.yml  environment.yml  index.qmd  setup.cfg
.github/workflows/: publish-pythia.yaml  publish-quarto.yaml  publish.yaml
chapters/: 01_classification.qmd  02_floodmapping.qmd  Classification.qmd  Floodmapping.qmd  Placeholder.qmd  references.bib
chapters/courses/: Microwave-remote-sensing.qmd  microwave-remote-sensing.qmd
chapters/courses/microwave-remote-sensing/: 01_in_class_exercise.qmd  (+8 more)
chapters/templates/: classification.qmd  data-formats.qmd  data-formats.yml  prereqs-templates.qmd
chapters/tutorials/: Floodmapping.qmd  floodmapping.qmd  prereqs-tutorials.qmd
data/courses/: microwave-remote-sensing.ipynb  microwave-remote-sensing.yml
notebooks/: 01_classification.ipynb  01_classification.yml  02_floodmapping.ipynb  02_floodmapping.yml  Classification.ipynb  Classification.yml  Floodmapping.ipynb  Floodmapping.yml  Makefile  Placeholder.ipynb  references.ipynb
notebooks/courses/: Microwave-remote-sensing.yml  microwave-remote-sensing.ipynb  microwave-remote-sensing.yml
notebooks/templates/: Classification.ipynb  classification.ipynb  prereqs-templates.ipynb
notebooks/tutorials/: Floodmapping.ipynb  floodmapping.ipynb  prereqs-tutorials.ipynb
src/: clean-nb.py  render_sfinx_toc.py
src/eo_datascience/: __init__.py  clean_nb.py  merge_envs.py  render_sfinx_toc.py
tests/: mock.ipynb  mock.qmd  test_merge_env.py  test_quarto_nb_conversions.py
(+9 files in other folders)
